Add GraphQl endpoints to access the data from an array

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,11 @@
   "author": "Neetika Srivastava",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
+    "lodash": "^4.17.15",
+    "pg": "^7.18.1",
+    "prettify": "^0.1.7"
   }
 }
